// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with empty version 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 
  </h4>
  <small>
    \`($
    test
    )\`
  </small>
  <br />
  <br />
  <br />
  <small>
    We are the best!
  </small>
  <br />
</section>
`;

exports[`renders correctly with ui-config 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 1.1.0
  </h4>
  <small>
    \`($
    test
    )\`
  </small>
  <br />
  <br />
  <br />
  <small>
    We are the best!
  </small>
  <br />
</section>
`;

exports[`renders correctly without uiConfig 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 1.1.0
  </h4>
  <br />
  <br />
  <br />
  <small />
  <br />
</section>
`;
